untrusted actor system and web sockets test

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,3 +57,20 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# configure actor system
+akka {
+  actor {
+    provider = "akka.remote.RemoteActorRefProvider"
+  }
+
+
+  remote {
+    untrusted-mode = on
+    server.untrusted-mode = on
+
+    netty.tcp {
+      hostname = "127.0.0.1"
+      port = 110 # LISTEN on tcp port
+    }
+  }
+}
