akka config fix

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,7 +69,7 @@ akka {
     server.untrusted-mode = on
 
     netty.tcp {
-      hostname = "127.0.0.1"
+      hostname = "" # hostname of EC2 server (/etc/hosts needs to have mapping local => hostname)
       port = 110 # LISTEN on tcp port
     }
   }
