--- a/conf/application.test.conf
+++ b/conf/application.test.conf
@@ -69,7 +69,7 @@ akka {
     server.untrusted-mode = on
 
     netty.tcp {
-      hostname = "" # hostname of EC2 server (/etc/hosts needs to have mapping local => hostname)
+      hostname = "clashcode.com" # hostname of EC2 server (/etc/hosts needs to have mapping local => hostname)
       port = 110 # LISTEN on tcp port
     }
   }
