--- a/conf/application.conf
+++ b/conf/application.conf
@@ -74,3 +74,30 @@ akka {
     }
   }
 }
+
+
+# cluster: configure actor system
+cluster {
+    akka {
+      actor {
+        provider = "akka.cluster.ClusterActorRefProvider"
+      }
+
+      remote {
+        # untrusted-mode = on
+        # server.untrusted-mode = on
+
+        netty.tcp {
+          hostname = ""
+          port = 443
+        }
+      }
+
+      cluster {
+        seed-nodes = [
+          "akka.tcp://cluster@10.200.1.27:443"
+        ]
+        auto-down = on
+      }
+    }
+}
