simple javascript visualization

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,14 +69,14 @@ cluster {
         # server.untrusted-mode = on
 
         netty.tcp {
-          hostname = ""
+          hostname = "192.168.0.11"
           port = 110
         }
       }
 
       cluster {
         seed-nodes = [
-          "akka.tcp://cluster@10.200.1.27:110"
+          "akka.tcp://cluster@192.168.0.11:110"
         ]
         auto-down = on
       }
